[BE] fix: GeoJSON 관련 파서 유틸 클래스 리팩토링 작업